--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -28,9 +28,14 @@
                 <th>Edit</th>
             </thead>
             <tbody>
-                
+
             </tbody>
         </table>
+        <section hidden id="update-row">
+            <label>Edit Name:</label>
+            <input type="text" id="update-name-input">
+            <button id="update-row-btn">Update</button>
+        </section>
     </main>
     <script src="index.js"></script>
 </body>
