Customer field and value added to jobs, table and database

--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -10,6 +10,10 @@
     <main>
         <label>Job Name:</label>
         <input type="text" id="name-input">
+        <br> <br>
+        <label>Customer Name:</label>
+        <input type="text" id="customer-input">
+        <br> <br>
         <button id="add-name-btn">Add Job</button>
 
         <br><br><br>
@@ -24,8 +28,10 @@
                 <th>ID</th>
                 <th>Name</th>
                 <th>Date Added</th>
+                <th>Customer</th>
                 <th>Delete</th>
                 <th>Edit</th>
+                
             </thead>
             <tbody>
 
