--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -14,6 +14,9 @@
         <label>Customer Name:</label>
         <input type="text" id="customer-input">
         <br> <br>
+        <label>Description:</label>
+        <input type="text" id="description-input">
+        <br> <br>
         <button id="add-name-btn">Add Job</button>
 
         <br><br><br>
@@ -29,6 +32,7 @@
                 <th>Name</th>
                 <th>Date Added</th>
                 <th>Customer</th>
+                <th>Description</th>
                 <th>Delete</th>
                 <th>Edit</th>
                 
