Working on adding report function by customer

--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -54,6 +54,28 @@
             <br> <br>
             <button id="update-row-btn">Update</button>
         </section>
+        <br> <br> <br>
+        <div>
+            <input placeholder="Report by customer"
+            id="report-input">
+            <button id="report-btn">Get Report</button>
+        </div>
+        <br> <br> <br>
+        <section hidden id="report-row">
+        <table id="report-table">
+            <thead>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Date Added</th>
+                <th>Customer</th>
+                <th>Description</th>
+                
+            </thead>
+            <tbody>
+
+            </tbody>
+        </table>
+    </section>
     </main>
     <script src="index.js"></script>
 </body>
