Report by customer complete and working

--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -60,9 +60,10 @@
             id="report-input">
             <button id="report-btn">Get Report</button>
         </div>
-        <br> <br> <br>
+        
         <section hidden id="report-row">
-        <table id="report-table">
+            <h2>Report by Customer</h2>
+        <table class="report-table">
             <thead>
                 <th>ID</th>
                 <th>Name</th>
